RESOLVED FIXED302162
[blocks-in-inline] Incorrect spacing when middle-block has margin
https://bugs.webkit.org/show_bug.cgi?id=302162
Summary [blocks-in-inline] Incorrect spacing when middle-block has margin
alan
Reported 2025-11-07 10:36:32 PST
ssia
Attachments
Patch (5.93 KB, patch)
2025-11-07 10:44 PST, alan
no flags
[fast-cq]Patch (5.89 KB, patch)
2025-11-07 10:56 PST, alan
no flags
alan
Comment 1 2025-11-07 10:44:04 PST
alan
Comment 2 2025-11-07 10:56:45 PST
Created attachment 477331 [details] [fast-cq]Patch
EWS
Comment 3 2025-11-07 14:19:39 PST
Committed 302750@main (3a892035e25f): <https://commits.webkit.org/302750@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477331 [details].
Radar WebKit Bug Importer
Comment 4 2025-11-07 14:20:12 PST
Note You need to log in before you can comment on or make changes to this bug.