[blocks-in-inline] Incorrect spacing when middle-block has margin https://bugs.webkit.org/show_bug.cgi?id=302162

Reviewed by Antti Koivisto.

Take the block's margin into account when computing the final position.

While we stretch the line box with the margin box of the block, the renderers expect the top/left pointing to the border box.

Test: fast/inline/blocks-in-inline-layout-single-block-with-margin.html

* LayoutTests/fast/inline/blocks-in-inline-layout-single-block-with-margin-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-layout-single-block-with-margin.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processNonBidiContent):
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBlockInInline):

Canonical link: https://commits.webkit.org/302750@main