Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp
@@ -77,6 +77,9 @@ void layoutWithFormattingContextForBlockInInline(const Layout::ElementBox& block
     if (!renderBlockFlow)
         return;
 
+    auto& blockBoxGeometry = layoutState.ensureGeometryForBox(block);
+    blockBoxGeometry.setTopLeft(LayoutPoint { blockBoxGeometry.marginStart(), blockBoxGeometry.marginBefore() });
+
     if (!renderBlockFlow->containsFloats() || renderBlockFlow->createsNewFormattingContext())
         return;
 
